# BlockBuster-MatchMaking

./: Cargo.toml  README.md
docs/src/: Architecture.md  ConfigGame.md  CreateGame.md  Endpoints.md  Entities.md  GameDetails.md  Interoperation.md  Introduction.md  JoinGame.md  LeaveGame.md  ListGames.md  Login.md  SUMMARY.md  StartGame.md  ToggleReady.md  UpdateGame.md
src/: entity.rs  main.rs  payload.rs
src/matchmaking/: database.rs  endpoints.rs  entity.rs  mod.rs  payload.rs
