[package]
name = "blockbuster-mm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde_json = "1.0"
serde = { version = "*", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
ringbuffer = "*"
rand = "*"
clap = { version = "3.1.6", features = ["derive"] }
base64 = { version = "0.13.0"}
zip = "0.6"
walkdir = "1.0"